--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,7 +18,7 @@
           </li>
           <%}%>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fa fa-book-reader"></i> Public Stories</a>
+              <a class="nav-link" href="/public"><i class="fa fa-book-reader"></i> Public Stories</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> User</a>
